# better-api

./: '  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  todo.md
diagnostic/: Cargo.toml  (+1 more)
semantics/: Cargo.toml  endpoint.rs  lib.rs  mime.rs  name.rs  path.rs  source_map.rs  string.rs  text.rs  typ.rs  value.rs
semantics/analyzer/: compare.rs  endpoint.rs  metadata.rs  mod.rs  symbols.rs  typ.rs  value.rs
semantics/analyzer/endpoint/: analyze.rs  lower.rs  mod.rs
semantics/analyzer/tests/: compare.rs  endpoint.rs  mod.rs  typ.rs  validate_symbols.rs  value.rs
semantics/oracle/: compare.rs  endpoint.rs  metadata.rs  mod.rs  symbols.rs  typ.rs  value.rs
semantics/oracle/snapshots/: better_api_semantics__oracle__metadata__test__analyze_api_version.snap  better_api_semantics__oracle__metadata__test__analyze_basic_metadata.snap  better_api_semantics__oracle__metadata__test__lower_basic_metadata.snap
semantics/oracle/tests/: compare.rs  endpoint.rs  mod.rs  typ.rs  type_def.rs  validate_symbols.rs  value.rs
semantics/path/: mod.rs
semantics/path/test/: mod.rs  param.rs  part.rs  path.rs
semantics/snapshots/: better_api_semantics__path__test__empty_parameter.snap  better_api_semantics__path__test__empty_path.snap  better_api_semantics__path__test__empty_segments.snap  better_api_semantics__path__test__invalid_chars_in_path.snap  better_api_semantics__path__test__invalid_chars_unicode.snap  better_api_semantics__path__test__invalid_param_name_special_chars.snap  better_api_semantics__path__test__invalid_param_name_starts_with_number.snap  better_api_semantics__path__test__invalid_parameter_position_end.snap  better_api_semantics__path__test__invalid_parameter_position_start.snap  better_api_semantics__path__test__invalid_trailing_slash.snap  better_api_semantics__path__test__invalid_url_escape_incomplete.snap  better_api_semantics__path__test__invalid_url_escape_missing.snap  better_api_semantics__path__test__invalid_url_escape_non_hex.snap  better_api_semantics__path__test__missing_leading_slash.snap  better_api_semantics__path__test__multiple_errors.snap  better_api_semantics__path__test__path_part_new_basic-2.snap  better_api_semantics__path__test__path_part_new_basic.snap  better_api_semantics__path__test__range_interpretation.snap  better_api_semantics__text__test__new_cache-2.snap  better_api_semantics__text__test__new_cache.snap
semantics/spec/: endpoint.rs  metadata.rs  mod.rs  typ.rs  value.rs
semantics/spec/arena/: endpoint.rs  mod.rs  typ.rs  value.rs
semantics/spec/view/: endpoint.rs  mod.rs  typ.rs  value.rs
semantics/text/: mod.rs  test.rs
syntax/: Cargo.toml  ast.rs  lib.rs  node.rs  parser.rs  tokenizer.rs
syntax/ast/: compare.rs  mod.rs
syntax/parser/: basic.rs  endpoint.rs  mod.rs  prologue.rs  test.rs  types.rs  values.rs
syntax/parser/snapshots/: better_api_syntax__parser__basic__test__parse_basic_info.snap  (+42 more)
syntax/snapshots/: better_api_syntax__parser__test__parse_array_type.snap  better_api_syntax__parser__test__parse_record_type.snap  better_api_syntax__parser__test__parse_server.snap  better_api_syntax__parser__test__parse_server_error-2.snap  better_api_syntax__parser__test__parse_server_error.snap  better_api_syntax__parser__test__parse_simple_type_def.snap  better_api_syntax__parser__test__parse_value.snap  better_api_syntax__parser__test__placeholder_test.snap  better_api_syntax__tokenizer__test__number-2.snap  better_api_syntax__tokenizer__test__number.snap  better_api_syntax__tokenizer__test__simple_keywords_and_idents.snap  better_api_syntax__tokenizer__test__types.snap
(+73 files in other folders)
