[workspace]
members = ["diagnostic", "syntax"]
default-members = [".", "diagnostic", "syntax"]

[workspace.package]
authors = ["Vid Drobnič <me@viddrobnic.com>"]
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/viddrobnic/better-api"
version = "0.1.0"

[package]
name = "better-api"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
