[workspace]
members = ["diagnostic", "semantics", "syntax"]
default-members = [".", "diagnostic", "syntax", "semantics"]

[workspace.package]
authors = ["Vid Drobnič <me@viddrobnic.com>"]
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/better-api/better-api"
version = "0.1.0"

[package]
name = "better-api"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[workspace.dependencies]
insta = "1.43"
indoc = "2"
derive_more = { version = "2.0", features = ["display", "debug"] }
rowan = "0.16"
smallvec = "1.15"
