[package]
name = "better-api-semantics"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
better-api-syntax = { path = "../syntax" }
better-api-diagnostic = { path = "../diagnostic" }
derive_more.workspace = true
string-interner = "0.19"

[dev-dependencies]
insta.workspace = true
indoc.workspace = true
