[package]
name = "better-api-semantics"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
derive_more.workspace = true
smallvec.workspace = true

better-api-syntax = { path = "../syntax" }
better-api-diagnostic = { path = "../diagnostic" }
string-interner = "0.19"
http = "1.4"

[dev-dependencies]
insta.workspace = true
indoc.workspace = true
