[package]
name = "better-api-syntax"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
better-api-diagnostic = { path = "../diagnostic" }
derive_more.workspace = true
rowan.workspace = true

[dev-dependencies]
insta.workspace = true
indoc.workspace = true
